--- a/Ghost Runner/storyBoard/Base.lproj/Login.storyboard
+++ b/Ghost Runner/storyBoard/Base.lproj/Login.storyboard
@@ -5,6 +5,7 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -77,6 +78,56 @@
             </objects>
             <point key="canvasLocation" x="663.08411214953264" y="138.01295896328295"/>
         </scene>
+        <!--Email Login View Controller-->
+        <scene sceneID="qqA-Aa-EeF">
+            <objects>
+                <viewController storyboardIdentifier="emailLoginRoute" id="006-Oz-l22" customClass="EmailLoginViewController" customModule="Ghost_Runner" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="g57-mI-RUt">
+                        <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ons-ff-iLT">
+                                <rect key="frame" x="20" y="151" width="388" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <textField opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="EK8-4Z-KeL">
+                                <rect key="frame" x="20" y="215" width="388" height="34"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KS5-2Z-6iU">
+                                <rect key="frame" x="20" y="282" width="388" height="47"/>
+                                <color key="backgroundColor" red="0.55634254220000001" green="0.97934550050000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="LOGIN">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <connections>
+                                    <action selector="login" destination="006-Oz-l22" eventType="touchUpInside" id="WTM-gF-s3D"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="fOm-hu-QJv"/>
+                        <color key="backgroundColor" systemColor="labelColor"/>
+                        <constraints>
+                            <constraint firstItem="KS5-2Z-6iU" firstAttribute="centerX" secondItem="g57-mI-RUt" secondAttribute="centerX" id="54Q-s0-tLT"/>
+                            <constraint firstItem="ons-ff-iLT" firstAttribute="leading" secondItem="fOm-hu-QJv" secondAttribute="leading" constant="20" id="QI1-RI-Y3B"/>
+                            <constraint firstItem="KS5-2Z-6iU" firstAttribute="leading" secondItem="fOm-hu-QJv" secondAttribute="leading" constant="20" id="ZfR-pA-Cux"/>
+                            <constraint firstItem="EK8-4Z-KeL" firstAttribute="leading" secondItem="fOm-hu-QJv" secondAttribute="leading" constant="20" id="hhz-ID-YjY"/>
+                            <constraint firstItem="EK8-4Z-KeL" firstAttribute="centerX" secondItem="g57-mI-RUt" secondAttribute="centerX" id="kuB-nx-f6I"/>
+                            <constraint firstItem="ons-ff-iLT" firstAttribute="centerX" secondItem="g57-mI-RUt" secondAttribute="centerX" id="lwk-GW-aPw"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="emailField" destination="ons-ff-iLT" id="LcC-DH-akw"/>
+                        <outlet property="loginButton" destination="KS5-2Z-6iU" id="ybd-v4-Xdp"/>
+                        <outlet property="pwField" destination="EK8-4Z-KeL" id="Tzj-fN-YzS"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gEY-lg-KTc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1467.7570093457944" y="137.36501079913609"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="Ie1-tn-vQo">
             <objects>
@@ -98,5 +149,8 @@
     </scenes>
     <resources>
         <image name="google" width="18" height="18"/>
+        <systemColor name="labelColor">
+            <color white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
